New timers appear to be working.
git-svn-id: http://qmcpack.googlecode.com/svn@2583 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -28,6 +28,7 @@ SET (EXECUTABLE_OUTPUT_PATH ${qmcpack_BINARY_DIR}/bin CACHE PATH "Single output 
 SET(OHMMS_DIM 3 CACHE INTEGER "Select physical dimension")
 SET(OHMMS_INDEXTYPE int)
 SET(OHMMS_PRECISION double)
+
 SET(QMC_COMPLEX 0 CACHE BOOL "Build for complex binary")
 SET(QMC_MPI 1 CACHE BOOL "Enable/disable MPI")
 SET(QMC_OMP 0 CACHE BOOL "Enable/disable OpenMP")
@@ -156,6 +157,7 @@ MESSAGE("-- CXX compiler flags: ${CMAKE_CXX_FLAGS}")
 #INCLUDE(${PROJECT_CMAKE}/IBMCompilers.cmake)
 #INCLUDE(${PROJECT_CMAKE}/KCCCompilers.cmake)
 #INCLUDE(${PROJECT_CMAKE}/Intel7.cmake)
+#INCLUDE(${PROJECT_CMAKE}/IntelHarpertown.cmake)
 
 ######################################################
 # DO NOT MODIFY BELOW
@@ -169,23 +171,23 @@ INCLUDE(${PROJECT_CMAKE}/FindPkgConfig.cmake)
 #INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
 
 #COMMENT OUT EINSPLINE 
-#IF ( CMAKE_PKGCONFIG_EXECUTABLE )
-#   # Find all the librtk stuff with pkg-config
-#   PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
-#   INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
-#   ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
-#   SET(HAVE_EINSPLINE 1)
-#   LINK_DIRECTORIES(${EINSPLINE_LINK_DIRS})
-#   LINK_LIBRARIES  (${EINSPLINE_LINK_LIBS})
-#   FIND_LIBRARY(EINSPLINE_LIBRARY einspline ${EINSPLINE_LINK_DIRS})
-#   LINK_LIBRARIES(${EINSPLINE_LIBRARY})  
-#   MESSAGE("-- Einspline library found at  ${EINSPLINE_LIBRARY}")	 
-#   IF (EINSPLINE_LIBRARY)	
-#      LINK_LIBRARIES(${EINSPLINE_LIBRARY})
-#   ENDIF (EINSPLINE_LIBRARY)
-#ELSE  ( CMAKE_PKGCONFIG_EXECUTABLE )
-#   # Can't find pkg-config -- have to find libeinspline somehow else
-#ENDIF ( CMAKE_PKGCONFIG_EXECUTABLE )
+IF ( CMAKE_PKGCONFIG_EXECUTABLE )
+   # Find all the librtk stuff with pkg-config
+   PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
+   INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
+   ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
+   SET(HAVE_EINSPLINE 1)
+   LINK_DIRECTORIES(${EINSPLINE_LINK_DIRS})
+   LINK_LIBRARIES  (${EINSPLINE_LINK_LIBS})
+   FIND_LIBRARY(EINSPLINE_LIBRARY einspline ${EINSPLINE_LINK_DIRS})
+   LINK_LIBRARIES(${EINSPLINE_LIBRARY})  
+   MESSAGE("-- Einspline library found at  ${EINSPLINE_LIBRARY}")	 
+   IF (EINSPLINE_LIBRARY)	
+      LINK_LIBRARIES(${EINSPLINE_LIBRARY})
+   ENDIF (EINSPLINE_LIBRARY)
+ELSE  ( CMAKE_PKGCONFIG_EXECUTABLE )
+   # Can't find pkg-config -- have to find libeinspline somehow else
+ENDIF ( CMAKE_PKGCONFIG_EXECUTABLE )
 
 #ADD_DEFINITIONS(-DMPICH_SKIP_MPICXX)
 
