Fix einspline problem. Needs to be verified with einspline library.
git-svn-id: http://qmcpack.googlecode.com/svn@2630 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -174,19 +174,20 @@ INCLUDE(${PROJECT_CMAKE}/FindPkgConfig.cmake)
 IF ( CMAKE_PKGCONFIG_EXECUTABLE )
    # Find all the librtk stuff with pkg-config
    PKGCONFIG( "einspline >= 0.7" HAVE_EINSPLINE EINSPLINE_INCLUDE_DIRS EINSPLINE_DEFINES EINSPLINE_LINK_DIRS EINSPLINE_LIBS )
-   INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
-   ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
-   SET(HAVE_EINSPLINE 1)
-   LINK_DIRECTORIES(${EINSPLINE_LINK_DIRS})
-   LINK_LIBRARIES  (${EINSPLINE_LINK_LIBS})
    FIND_LIBRARY(EINSPLINE_LIBRARY einspline ${EINSPLINE_LINK_DIRS})
-   LINK_LIBRARIES(${EINSPLINE_LIBRARY})  
-   MESSAGE("-- Einspline library found at  ${EINSPLINE_LIBRARY}")	 
-   IF (EINSPLINE_LIBRARY)	
-      LINK_LIBRARIES(${EINSPLINE_LIBRARY})
-   ENDIF (EINSPLINE_LIBRARY)
+   IF(EINSPLINE_LIBRARY)	
+     INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
+     ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
+     SET(HAVE_EINSPLINE 1)
+     #LINK_DIRECTORIES(${EINSPLINE_LINK_DIRS})
+     #LINK_LIBRARIES  (${EINSPLINE_LINK_LIBS})
+     LINK_LIBRARIES(${EINSPLINE_LIBRARY})  
+     MESSAGE("-- Einspline library found at  ${EINSPLINE_LIBRARY}")	 
+   ELSE(EINSPLINE_LIBRARY)	
+     MESSAGE("-- Missing Einspline library. Disable Einspline option.")
+   ENDIF(EINSPLINE_LIBRARY)	
 ELSE  ( CMAKE_PKGCONFIG_EXECUTABLE )
-   # Can't find pkg-config -- have to find libeinspline somehow else
+  MESSAGE("-- Missing pkgconfig. Disable Einspline library.")
 ENDIF ( CMAKE_PKGCONFIG_EXECUTABLE )
 
 #ADD_DEFINITIONS(-DMPICH_SKIP_MPICXX)
