adding for ZVZB -JBM
git-svn-id: http://qmcpack.googlecode.com/svn@2692 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(HAMSRCS
   HamiltonianFactory.cpp
   NonLocalTOperator.cpp
   NumericalRadialPotential.cpp
+  RPAPressureCorrection.cpp
 )
 #  FSAtomPseudoPot.cpp
 
