Adding kSpaceJastrow stuff.
git-svn-id: http://qmcpack.googlecode.com/svn@2698 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -17,6 +17,8 @@ SET(JASTROW_SRCS
   Jastrow/JastrowBuilder.cpp
   Jastrow/BsplineFunctor.cpp
   Jastrow/BsplineJastrowBuilder.cpp
+  Jastrow/kSpaceJastrow.cpp
+  Jastrow/kSpaceJastrowBuilder.cpp
 )
 
 # common ferminoic wavefunctions
