Add SSSE-related flag.
git-svn-id: http://qmcpack.googlecode.com/svn@2713 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/config.h.cmake.in
+++ b/trunk/src/config.h.cmake.in
@@ -143,6 +143,9 @@
 /* Define if sse3 support exists */
 #cmakedefine HAVE_SSE3 @HAVE_SSE3@
 
+/* Define if ssse3 support exists */
+#cmakedefine HAVE_SSSE3 @HAVE_SSSE3@
+
 /* Define if c variable array support exists */
 #cmakedefine HAVE_C_VARARRAYS @HAVE_C_VARARRAYS@
 
