--- a/trunk/src/config.h.cmake.in
+++ b/trunk/src/config.h.cmake.in
@@ -134,6 +134,9 @@
 /* Define if unistd.h exists */
 #cmakedefine HAVE_UNISTD_H @HAVE_UNISTD_H@
 
+/* Define if mmx support exists */
+#cmakedefine HAVE_MMX @HAVE_MMX@
+
 /* Define if sse support exists */
 #cmakedefine HAVE_SSE @HAVE_SSE@
 
