Add a missing file to compile.
git-svn-id: http://qmcpack.googlecode.com/svn@2745 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -15,6 +15,7 @@ SET(UTILITIES
   Utilities/OhmmsInform.cpp 
   Utilities/OhmmsInfo.cpp 
   Utilities/NewTimer.cpp
+  Utilities/ProgressReportEngine.cpp
   OhmmsData/Libxml2Doc.cpp
   OhmmsApp/ProjectData.cpp
   OhmmsApp/RandomNumberControl.cpp
