Add HAVE_EINSPLINE_EXT which is set to 1 when libeinspline is provided externally.
git-svn-id: http://qmcpack.googlecode.com/svn@2769 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -6,7 +6,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
 # Version 
 ######################################################################
 SET(QMCPLUSPLUS_VERSION_MAJOR 0)
-SET(QMCPLUSPLUS_VERSION_MINOR 4)
+SET(QMCPLUSPLUS_VERSION_MINOR 5)
 SET(QMCPLUSPLUS_VERSION_PATCH 0)
 SET(QMCPLUSPLUS_RELEASE 0)
 SET(QMCPLUSPLUS_VERSION "${QMCPLUSPLUS_VERSION_MAJOR}.${QMCPLUSPLUS_VERSION_MINOR}.$(QMCPLUSPLUS_VERSION_PATH}")
@@ -136,6 +136,7 @@ SET(INTEL_COMPILER 0)
 SET(MAC_VECLIB 0)
 SET(ENABLE_GTK_GUI 0)
 SET(HAVE_EINSPLINE 0)
+SET(HAVE_EINSPLINE_EXT 0)
 
 ######################################################
 # Directory where customize cmake files reside
@@ -323,6 +324,7 @@ IF ( CMAKE_PKGCONFIG_EXECUTABLE )
      INCLUDE_DIRECTORIES(${EINSPLINE_INCLUDE_DIRS})
      ADD_DEFINITIONS (${EINSPLINE_DEFINES} -DHAVE_EINSPLINE)
      SET(HAVE_EINSPLINE 1)
+     SET(HAVE_EINSPLINE_EXT 1)
      LINK_LIBRARIES(${EINSPLINE_LIBRARY})  
      MESSAGE("-- Einspline library found at  ${EINSPLINE_LIBRARY}")	 
    ELSE(HAVE_EINSPLINE)	
