New MuffinTin class now compiles.  Have not integrated functionality.
git-svn-id: http://qmcpack.googlecode.com/svn@2780 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -68,6 +68,7 @@ IF(OHMMS_DIM MATCHES 3)
       EinsplineSet.cpp
       EinsplineSetBuilder.cpp
       EinsplineWrapper.cpp
+      MuffinTin.cpp
      )
   ENDIF(HAVE_EINSPLINE)
     
