M    QMCDrivers/RQMCMultiple.cpp M    QMCDrivers/CMakeLists.txt M    QMCDrivers/MultiChain.h M    QMCDrivers/RQMCMultiple.h M    QMCDrivers/MultiChain.cpp M    Estimators/CSPolymerEstimator.cpp A    Estimators/MJPolymerEstimator.cpp M    Estimators/CSPolymerEstimator.h A    Estimators/MJPolymerEstimator.h A    Estimators/PolymerEstimator.h
git-svn-id: http://qmcpack.googlecode.com/svn@2794 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -37,6 +37,7 @@ SET(QMCDRIVERS
   CorrelatedSampling/CSVMCUpdatePbyP.cpp
   ../Estimators/CSEnergyEstimator.cpp
   ../Estimators/CSPolymerEstimator.cpp
+  ../Estimators/MJPolymerEstimator.cpp
 )
 #  ../Estimators/PairCorrEstimator.cpp
 
