Add APP_PRECISION. To replace OHMMS_PRECISION later.
git-svn-id: http://qmcpack.googlecode.com/svn@2800 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -30,6 +30,7 @@ SET (EXECUTABLE_OUTPUT_PATH ${qmcpack_BINARY_DIR}/bin CACHE PATH "Single output 
 SET(OHMMS_DIM 3 CACHE INTEGER "Select physical dimension")
 SET(OHMMS_INDEXTYPE int)
 SET(OHMMS_PRECISION double)
+SET(APP_PRECISION double)
 
 SET(QMC_COMPLEX 0 CACHE BOOL "Build for complex binary")
 SET(QMC_MPI 1 CACHE BOOL "Enable/disable MPI")
