Add makeClone and copyFrom functions to OrbitalBase and SPOSetBase so that we can clone them.
git-svn-id: http://qmcpack.googlecode.com/svn@2840 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -1,5 +1,6 @@
 SET(WFBASE_SRCS
     TrialWaveFunction.cpp
+    OrbitalBase.cpp
     OrbitalBuilderBase.cpp
     WaveFunctionFactory.cpp
     ComboOrbital.cpp
