Remove BsplineFunctor.cpp. Use const TinyVector instead of static.
git-svn-id: http://qmcpack.googlecode.com/svn@2871 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -16,12 +16,12 @@ SET(JASTROW_SRCS
   Jastrow/AnyConstraints.cpp
   Jastrow/CBSOBuilder.cpp
   Jastrow/JastrowBuilder.cpp
-  Jastrow/BsplineFunctor.cpp
   Jastrow/BsplineJastrowBuilder.cpp
   Jastrow/kSpaceJastrow.cpp
   Jastrow/kSpaceJastrowBuilder.cpp
 )
 
+#  Jastrow/BsplineFunctor.cpp
 # common ferminoic wavefunctions
 SET(FERMION_SRCS
   SPOSetBase.cpp
