Add CheckCCompilerFlag.cmake to check compiler flags.
git-svn-id: http://qmcpack.googlecode.com/svn@2875 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -164,6 +164,7 @@ ENDIF(Subversion_FOUND)
 ######################################################
 SET(FOUND_CXXENV 0)
 INCLUDE(${CMAKE_ROOT}/Modules/TestCXXAcceptsFlag.cmake)
+INCLUDE(${CMAKE_ROOT}/Modules/CheckCCompilerFlag.cmake)
 
 ######################################################
 # Try to identify CPU identity
