Add HAVE_ACML and HAVE_MKL to config.h so that we can use vectorized version.
git-svn-id: http://qmcpack.googlecode.com/svn@2921 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -138,6 +138,8 @@ SET(MAC_VECLIB 0)
 SET(ENABLE_GTK_GUI 0)
 SET(HAVE_EINSPLINE 0)
 SET(HAVE_EINSPLINE_EXT 0)
+SET(HAVE_MKL 0)
+SET(HAVE_ACML 0)
 
 ######################################################
 # Directory where customize cmake files reside
