Remove dispersion stuff for now.
git-svn-id: http://qmcpack.googlecode.com/svn@2931 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/opt-r2922-20080728/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/opt-r2922-20080728/src/QMCHamiltonians/CMakeLists.txt
@@ -22,12 +22,12 @@ IF(OHMMS_DIM MATCHES 3)
      )
 ENDIF(OHMMS_DIM MATCHES 3)
 
-IF(HAVE_LIBFFTW)
-  SET(HAMSRCS ${HAMSRCS}
-    DispersionRelation.cpp
-    MomentumDistribution.cpp
-)
-ENDIF(HAVE_LIBFFTW)
+#IF(HAVE_LIBFFTW)
+#  SET(HAMSRCS ${HAMSRCS}
+#    DispersionRelation.cpp
+#    MomentumDistribution.cpp
+#)
+#ENDIF(HAVE_LIBFFTW)
 
 ADD_LIBRARY(qmcham ${HAMSRCS})
 #IF(QMC_BUILD_STATIC)
