Fixed compiler bugs with VariableSet.
git-svn-id: http://qmcpack.googlecode.com/svn@2940 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/opt-r2922-20080728/src/CMakeLists.txt
+++ b/branches/opt-r2922-20080728/src/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(UTILITIES
   QMCFactory/OneDimGridFactory.cpp
   Message/Communicate.cpp 
   Message/MPIObjectBase.cpp 
+  Optimize/VariableSet.cpp
 )
 
 ##gsl library will be optional
