Remove MPC.cpp when fftw is missing.
git-svn-id: http://qmcpack.googlecode.com/svn@2954 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -19,11 +19,9 @@ IF(OHMMS_DIM MATCHES 3)
       ECPComponentBuilder.cpp
       ECPComponentBuilder.1.cpp
       ECPComponentBuilder.2.cpp
-      MPC.cpp
      )
    IF(HAVE_LIBFFTW)
-     SET(HAMSRCS ${HAMSRCS} 
-         MPC.cpp)
+     SET(HAMSRCS ${HAMSRCS} MPC.cpp)
    ENDIF (HAVE_LIBFFTW)
 ENDIF(OHMMS_DIM MATCHES 3)
 
