--- a/branches/opt-r2922-20080728/src/config.h.cmake.in
+++ b/branches/opt-r2922-20080728/src/config.h.cmake.in
@@ -174,6 +174,9 @@
 /* Fund mkl library */
 #cmakedefine HAVE_MKL @HAVE_MKL@
 
+/* Fund mkl/vml library */
+#cmakedefine HAVE_MKL_VML @HAVE_MKL_VML@
+
 /* Fund acml library */
 #cmakedefine HAVE_ACML @HAVE_ACML@
 
