D    RPAderivEnergy2.h A    HePressure.h D    RPAPotKin.h M    Pressure.h A    HFDHE2Potential.h D    RPAPressureCorrection.h A    RPAPressure.h D    RPAEnergyPressure.h M    CMakeLists.txt D    RPAPressureCorrection.cpp A    RPAPressure.cpp D    RPAderiv.h D    RPAderivEnergy.h M    HamiltonianFactory.cpp
git-svn-id: http://qmcpack.googlecode.com/svn@2990 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/opt-r2922-20080728/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/opt-r2922-20080728/src/QMCHamiltonians/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(HAMSRCS
   HamiltonianFactory.cpp
   NonLocalTOperator.cpp
   NumericalRadialPotential.cpp
-  RPAPressureCorrection.cpp
+  RPAPressure.cpp
 )
 #  FSAtomPseudoPot.cpp
 
