git-svn-id: http://qmcpack.googlecode.com/svn@2993 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/opt-r2922-20080728/src/QMCWaveFunctions/CMakeLists.txt
+++ b/branches/opt-r2922-20080728/src/QMCWaveFunctions/CMakeLists.txt
@@ -13,13 +13,14 @@ SET(JASTROW_SRCS
   Jastrow/JABBuilder.cpp
   Jastrow/PadeJastrowBuilder.cpp
   Jastrow/WMJastrowBuilder.cpp
-  Jastrow/RPAConstraints.cpp
   Jastrow/AnyConstraints.cpp
   Jastrow/CBSOBuilder.cpp
   Jastrow/JastrowBuilder.cpp
   Jastrow/BsplineJastrowBuilder.cpp
   Jastrow/kSpaceJastrow.cpp
   Jastrow/kSpaceJastrowBuilder.cpp
+  Jastrow/RPAJastrow.cpp
+  Jastrow/singleRPAJastrowBuilder.cpp
 )
 
 #  Jastrow/BsplineFunctor.cpp
