M    QMCDrivers/RQMCMultiple.cpp M    QMCDrivers/CMakeLists.txt M    QMCHamiltonians/HePressure.h A    Estimators/HFDHE2PolymerEstimator.h A    Estimators/HFDHE2PolymerEstimator.cpp
git-svn-id: http://qmcpack.googlecode.com/svn@3003 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/opt-r2922-20080728/src/QMCDrivers/CMakeLists.txt
+++ b/branches/opt-r2922-20080728/src/QMCDrivers/CMakeLists.txt
@@ -38,6 +38,7 @@ SET(QMCDRIVERS
   ../Estimators/CSEnergyEstimator.cpp
   ../Estimators/CSPolymerEstimator.cpp
   ../Estimators/MJPolymerEstimator.cpp
+  ../Estimators/HFDHE2PolymerEstimator.cpp
 )
 #  ../Estimators/PairCorrEstimator.cpp
 
