adding Hydrogen ZVZB DMC functionality. Fixing drift vectors in RQMC.
git-svn-id: http://qmcpack.googlecode.com/svn@3074 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/JBM/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/JBM/src/QMCHamiltonians/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(HAMSRCS
   NonLocalTOperator.cpp
   NumericalRadialPotential.cpp
   RPAPressure.cpp
+  HRPAPressure.cpp
 )
 #  FSAtomPseudoPot.cpp
 
