Add ID/ParentID to walker. WalkerControl classes assign a unique ID to each walker with branching.
git-svn-id: http://qmcpack.googlecode.com/svn@3075 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/config.h.cmake.in
+++ b/trunk/src/config.h.cmake.in
@@ -29,6 +29,9 @@
 /* define the subversion last changed date */
 #cmakedefine QMCPLUSPLUS_LAST_CHANGED_DATE  "@QMCPLUSPLUS_LAST_CHANGED_DATE@"
 
+/* define PRINT_DEBUG */
+#cmakedefine PRINT_DEBUG @PRINT_DEBUG@
+
 /* Enable OpenMP parallelization. */
 #cmakedefine ENABLE_OPENMP @ENABLE_OPENMP@
 
