Code now throws head in more intelligable way
git-svn-id: http://qmcpack.googlecode.com/svn@3087 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -61,6 +61,7 @@ IF(NOT QMCPLUSPLUS_RELEASE)
   SET(QMCDRIVERS ${QMCDRIVERS}
     PolymerEstimator.cpp
     RQMCMultiple.cpp
+    RQMCMultiplePbyP.cpp
     MultiChain.cpp
     SpaceWarp.cpp
     RQMCMultiWarp.cpp
