Adding cuda data to Walker.
git-svn-id: http://qmcpack.googlecode.com/svn@3176 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/CMakeLists.txt
+++ b/branches/cuda-20080919/CMakeLists.txt
@@ -37,6 +37,8 @@ SET(QMC_COMPLEX 0 CACHE INTEGER "Build for complex binary")
 SET(QMC_MPI 1 CACHE BOOL "Enable/disable MPI")
 SET(QMC_OMP 0 CACHE BOOL "Enable/disable OpenMP")
 SET(QMC_BITS 32 CACHE INTEGER "Select OS bit")
+SET(QMC_CUDA 0 CACHE BOOL  "Enable/disable CUDA GPU execution")
+
 
 ######################################################################
 # Standard test
@@ -109,6 +111,10 @@ ENDIF(NOT $ENV{QMC_BITS} MATCHES QMC_BITS)
 IF(NOT $ENV{QMC_COMPLEX} MATCHES QMC_COMPLEX)
   SET(QMC_COMPLEX $ENV{QMC_COMPLEX})
 ENDIF(NOT $ENV{QMC_COMPLEX} MATCHES QMC_COMPLEX)
+IF(NOT $ENV{QMC_CUDA} MATCHES QMC_CUDA)
+  SET(QMC_CUDA $ENV{QMC_CUDA})
+ENDIF(NOT $ENV{QMC_CUDA} MATCHES QMC_CUDA)
+
 
 ######################################################################
 # FIXED PARAMETERS for test and legacy reasons
@@ -242,6 +248,7 @@ INCLUDE(${PROJECT_CMAKE}/FindLapack.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindHDF5.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindPkgConfig.cmake)
+INCLUDE(${PROJECT_CMAKE}/cuda/FindCuda.cmake)
 #INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
 
 IF(QMC_MPI)
@@ -262,6 +269,10 @@ IF(FOUND_LIBXML2)
   LINK_LIBRARIES(${LIBXML2_LIBRARY})
   SET(HAVE_LIBXML2 1)
 ENDIF(FOUND_LIBXML2)
+
+INCLUDE_DIRECTORIES(${CUDA_INCLUDE})
+LINK_LIBRARIES(${CUDA_TARGET_LINK})
+
 
 IF(FOUND_BOOST)
   SET(HAVE_LIBBOOST 1)
