VMCcuda compiles, despite undefined functions.
git-svn-id: http://qmcpack.googlecode.com/svn@3188 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCDrivers/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCDrivers/CMakeLists.txt
@@ -40,6 +40,12 @@ SET(QMCDRIVERS
   ../Estimators/MJPolymerEstimator.cpp
   ../Estimators/HFDHE2PolymerEstimator.cpp
 )
+
+IF(QMC_CUDA)
+   SET(QMCDRIVERS ${QMCDRIVERS}
+   VMC/VMCcuda.cpp)
+ENDIF(QMC_CUDA)
+
 #  ../Estimators/PairCorrEstimator.cpp
 
 IF(ENABLE_OPENMP) 
