Almost done with three-body Jastrow. check In/Out for BasisSetBase so that we can optimize the scaling functions for three-body Jastrow.
git-svn-id: http://qmcpack.googlecode.com/svn@3200 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -64,6 +64,7 @@ IF(OHMMS_DIM MATCHES 3)
       MolecularOrbitals/STOBuilder.cpp
       MolecularOrbitals/GTOBuilder.cpp
       MolecularOrbitals/NGOBuilder.cpp
+      MolecularOrbitals/BsplineAOBuilder.cpp
      )
   IF(HAVE_EINSPLINE)
     SET(FERMION_SRCS 
