Trying to allow one to set CUDA precision distinct from overall precision.
git-svn-id: http://qmcpack.googlecode.com/svn@3206 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/CMakeLists.txt
+++ b/branches/cuda-20080919/CMakeLists.txt
@@ -31,6 +31,7 @@ SET(OHMMS_DIM 3 CACHE INTEGER "Select physical dimension")
 SET(OHMMS_INDEXTYPE int)
 SET(OHMMS_PRECISION double)
 SET(APP_PRECISION double)
+SET(CUDA_PRECISION float)
 
 SET(PRINT_DEBUG 0 CACHE BOOL "Enable/disable debug printing")
 SET(QMC_COMPLEX 0 CACHE INTEGER "Build for complex binary")
