Adding files for two-body Jastrow orbital evaluation with Bspline functors.
git-svn-id: http://qmcpack.googlecode.com/svn@3254 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
@@ -21,6 +21,7 @@ SET(JASTROW_SRCS
   Jastrow/kSpaceJastrowBuilder.cpp
   Jastrow/RPAJastrow.cpp
   Jastrow/singleRPAJastrowBuilder.cpp
+  Jastrow/TwoBodyJastrowOrbitalBspline.cpp
 )
 
 #  Jastrow/BsplineFunctor.cpp
@@ -51,7 +52,10 @@ ENDIF(QMC_COMPLEX)
 
 IF(QMC_CUDA)
    SET(FERMION_SRCS ${FERMION_SRCS}
-       Fermion/determinant_update.cu
+       Fermion/determinant_update.cu 
+      )
+   SET(JASTROW_SRCS ${JASTROW_SRCS}
+       Jastrow/CudaSpline.cu
       )
 ENDIF(QMC_CUDA)
 
