Adding OneBodyJastrowOrbitalBspline.cpp to CMakeLists.txt
git-svn-id: http://qmcpack.googlecode.com/svn@3272 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
@@ -22,6 +22,7 @@ SET(JASTROW_SRCS
   Jastrow/RPAJastrow.cpp
   Jastrow/singleRPAJastrowBuilder.cpp
   Jastrow/TwoBodyJastrowOrbitalBspline.cpp
+  Jastrow/OneBodyJastrowOrbitalBspline.cpp
 )
 
 #  Jastrow/BsplineFunctor.cpp
