Added kernel wrapper function.
git-svn-id: http://qmcpack.googlecode.com/svn@3287 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
@@ -22,6 +22,13 @@ IF(OHMMS_DIM MATCHES 3)
      )
 ENDIF(OHMMS_DIM MATCHES 3)
 
+IF(QMC_CUDA)
+   SET(HAMSRCS ${HAMSRCS}
+       Coulomb.cu 
+      )
+ENDIF(QMC_CUDA)
+
+
 #IF(HAVE_LIBFFTW)
 #  SET(HAMSRCS ${HAMSRCS}
 #    DispersionRelation.cpp
@@ -29,7 +36,13 @@ ENDIF(OHMMS_DIM MATCHES 3)
 #)
 #ENDIF(HAVE_LIBFFTW)
 
-ADD_LIBRARY(qmcham ${HAMSRCS})
+IF(QMC_CUDA)
+  CUDA_ADD_LIBRARY(qmcham ${HAMSRCS})
+ELSE(QMC_CUDA)
+  ADD_LIBRARY(qmcham ${HAMSRCS})
+ENDIF(QMC_CUDA)
+
+
 #IF(QMC_BUILD_STATIC)
 #  ADD_LIBRARY(qmcham STATIC ${HAMSRCS})
 #ELSE(QMC_BUILD_STATIC)
