SR coulomb sum might be working.
git-svn-id: http://qmcpack.googlecode.com/svn@3289 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
@@ -24,7 +24,7 @@ ENDIF(OHMMS_DIM MATCHES 3)
 
 IF(QMC_CUDA)
    SET(HAMSRCS ${HAMSRCS}
-       Coulomb.cu 
+       CudaCoulomb.cu 
       )
 ENDIF(QMC_CUDA)
 
