First part of NLPP GPU seems to be working.
git-svn-id: http://qmcpack.googlecode.com/svn@3308 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCHamiltonians/CMakeLists.txt
@@ -25,6 +25,7 @@ ENDIF(OHMMS_DIM MATCHES 3)
 IF(QMC_CUDA)
    SET(HAMSRCS ${HAMSRCS}
        CudaCoulomb.cu 
+       NLPP.cu
       )
 ENDIF(QMC_CUDA)
 
