Add a compiler flag distable WS cell checking.
git-svn-id: http://qmcpack.googlecode.com/svn@3311 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -365,6 +365,7 @@ INCLUDE_DIRECTORIES(
   ${qmcpack_BINARY_DIR}/src
   )
 ADD_DEFINITIONS(-DHAVE_CONFIG_H -DH5_USE_16_API -DAPPNAMESPACE=qmcplusplus)
+#ADD_DEFINITIONS(-DDISABLE_WS_CELL)
 
 IF(BUILD_QMCTOOLS)
   SUBDIRS(boost)
